изменена работа с ошибками в классах обработки команд